// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostHeaderUserInfo - Snapshots > matches snapshot with all props 1`] = `
<div
  class="flex min-w-0 items-center gap-3"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-size="default"
    data-testid="avatar"
  >
    <img
      alt="Snapshot User"
      data-testid="avatar-image"
      src="https://example.com/avatar.png"
    />
    <div
      data-testid="avatar-fallback"
    >
      SN
    </div>
  </div>
  <div
    class="min-w-0 flex-1"
    data-override-defaults="true"
    data-testid="container"
  >
    <p
      class="inline-block cursor-pointer truncate text-base leading-6 font-bold text-foreground hover:underline"
      data-testid="typography"
    >
      Snapshot User
    </p>
    <div
      class="flex min-w-0 items-center gap-2"
      data-override-defaults="true"
      data-testid="container"
    >
      <p
        class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
        data-testid="typography"
      >
        @
        snapshot
      </p>
      <p
        class="shrink-0 text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground"
        data-testid="typography"
      >
        150
        /
        280
      </p>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfo - Snapshots > matches snapshot with minimal props 1`] = `
<div
  class="flex min-w-0 items-center gap-3"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-size="default"
    data-testid="avatar"
  >
    <div
      data-testid="avatar-fallback"
    >
      TE
    </div>
  </div>
  <div
    class="min-w-0 flex-1"
    data-override-defaults="true"
    data-testid="container"
  >
    <p
      class="inline-block cursor-pointer truncate text-base leading-6 font-bold text-foreground hover:underline"
      data-testid="typography"
    >
      Test User
    </p>
    <div
      class="flex min-w-0 items-center gap-2"
      data-override-defaults="true"
      data-testid="container"
    >
      <p
        class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
        data-testid="typography"
      >
        @
        user123
      </p>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfo - Snapshots > matches snapshot without avatarUrl 1`] = `
<div
  class="flex min-w-0 items-center gap-3"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-size="default"
    data-testid="avatar"
  >
    <div
      data-testid="avatar-fallback"
    >
      SN
    </div>
  </div>
  <div
    class="min-w-0 flex-1"
    data-override-defaults="true"
    data-testid="container"
  >
    <p
      class="inline-block cursor-pointer truncate text-base leading-6 font-bold text-foreground hover:underline"
      data-testid="typography"
    >
      Snapshot User
    </p>
    <div
      class="flex min-w-0 items-center gap-2"
      data-override-defaults="true"
      data-testid="container"
    >
      <p
        class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
        data-testid="typography"
      >
        @
        snapshot
      </p>
      <p
        class="shrink-0 text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground"
        data-testid="typography"
      >
        50
        /
        280
      </p>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfo - Snapshots > matches snapshot without character count 1`] = `
<div
  class="flex min-w-0 items-center gap-3"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-size="default"
    data-testid="avatar"
  >
    <img
      alt="Snapshot User"
      data-testid="avatar-image"
      src="https://example.com/avatar.png"
    />
    <div
      data-testid="avatar-fallback"
    >
      SN
    </div>
  </div>
  <div
    class="min-w-0 flex-1"
    data-override-defaults="true"
    data-testid="container"
  >
    <p
      class="inline-block cursor-pointer truncate text-base leading-6 font-bold text-foreground hover:underline"
      data-testid="typography"
    >
      Snapshot User
    </p>
    <div
      class="flex min-w-0 items-center gap-2"
      data-override-defaults="true"
      data-testid="container"
    >
      <p
        class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
        data-testid="typography"
      >
        @
        snapshot
      </p>
    </div>
  </div>
</div>
`;
